transfer pkg: mpadge -> ropensci

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(
 # mapscanner ![](http://www.textfiles.com/underconstruction/CoColosseumHoop5020underconstruction_blk.gif)
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.org/mpadge/mapscanner.svg?branch=master)](https://travis-ci.org/mpadge/mapscanner)
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/mpadge/mapscanner?branch=master&svg=true)](https://ci.appveyor.com/project/mpadge/mapscanner)
-[![codecov](https://codecov.io/gh/mpadge/mapscanner/branch/master/graph/badge.svg)](https://codecov.io/gh/mpadge/mapscanner)
+[![Travis build status](https://travis-ci.org/ropensci/mapscanner.svg?branch=master)](https://travis-ci.org/ropensci/mapscanner)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/ropensci/mapscanner?branch=master&svg=true)](https://ci.appveyor.com/project/ropensci/mapscanner)
+[![codecov](https://codecov.io/gh/ropensci/mapscanner/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/mapscanner)
 [![Project Status: Concept](https://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
 <!-- badges: end -->
 
@@ -40,10 +40,10 @@ at [rOpenSci](https://ropensci.org).
 `mapscanner` is not (yet) on CRAN. The development version can be installed
 with any of the following options:
 ```{r install, eval = FALSE}
+remotes::install_github("ropensci/mapscanner")
 remotes::install_git("https://git.sr.ht/~mpadge/mapscanner")
 remotes::install_bitbucket("mpadge/mapscanner")
 remotes::install_gitlab("mpadge/mapscanner")
-remotes::install_github("mpadge/mapscanner")
 ```
 The package can then be loaded for usage in a R session with
 ```{r library}
@@ -55,7 +55,7 @@ library (mapscanner)
 The package is designed to enable the following workflow:
 
 1. Generate a map with the
-   [`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+   [`ms_generate_map()`](https://docs.ropensci.org/mapscanner/reference/ms_generate_map.html)
    function, which automatically produces both `.pdf` and `.png` versions;
 
 2. Either print the `.pdf` version to use as desired in any kind of survey
@@ -68,7 +68,7 @@ The package is designed to enable the following workflow:
    converting it to either `.pdf` or `.png` format; and
 
 5. Rectify the modified version against the original via the
-   [`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+   [`ms_rectify_maps()`](https://docs.ropensci.org/mapscanner/reference/ms_rectify_maps.html)
    function, which distinguishes individual annotations,
    and converts each one to a spatial object able to be analysed in any desired
    manner.
@@ -79,7 +79,7 @@ The `mapscanner` package is intended to aid a *practical* workflow, and so
 a few practical tips may be recommended here to ensure best results:
 
 1. The original digital files generated with
-   [`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+   [`ms_generate_map()`](https://docs.ropensci.org/mapscanner/reference/ms_generate_map.html)
    are necessary to rectify subsequently drawn-on and scanned maps, and so must
    be retained at all times.
 2. Marks drawn on maps should be *coloured* -- any black or grey markings will
@@ -202,7 +202,7 @@ leaflet (res) %>%
 
 And our hand-drawn lines shown above have been converted to standard spatial
 objects able to be analysed in any desired way. See the [package
-vignette](https://mpadge.github.io/mapscanner/articles/mapscanner.html) for
+vignette](https://docs.ropensci.org/mapscanner/articles/mapscanner.html) for
 more detail of what the `mapscanner` package can do.
 
 
